Refactor getAllProducts method to return paginated response with total items and pages